[package]
name = "fncmd"
version = "1.3.1"
license = "MPL-2.0"
authors = ["Sʜɪᴍᴜʀᴀ Yū <mail@yuhr.org>"]
description = "Command line interface as a function."
readme = "README.md"
repository = "https://github.com/yuhr/fncmd"
categories = ["command-line-interface"]
keywords = ["cli", "macro", "clap"]
edition = "2021"
exclude = [".*", "rust-toolchain", "*.toml", "justfile"]

[lib]
doctest = false

[workspace]
members = ["impl"]

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
fncmd-impl = { path = "impl", version = "=1.3.1" }
once_cell = "1.9.0"