[package]
name = "fncmd"
version = "2.0.0"
license = "MPL-2.0"
authors = ["Sʜɪᴍᴜʀᴀ Yū <mail@yuhr.org>"]
description = "Command line interface as a function."
readme = "README.md"
repository = "https://github.com/yuhr/fncmd"
categories = ["command-line-interface"]
keywords = ["cli", "macro", "clap"]
edition = "2021"
exclude = [".*", "rust-toolchain", "*.toml", "justfile"]

[lib]
doctest = false

[workspace]
members = ["impl"]

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
fncmd-impl = { path = "impl", version = "=2.0.0" }
once_cell = "1.9.0"

[dev-dependencies]
trycmd = { version = "0.14.16", features = ["examples"] }