[package]
name = "fncmd-impl"
version = "1.2.5"
license = "MPL-2.0"
authors = ["Yu Shimura <mail@yuhr.org>"]
description = "This crate shouldn't be used directly. Check fncmd."
repository = "https://github.com/yuhr/fncmd"
edition = "2021"
exclude = ["release.toml"]

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
cargo_metadata = "0.14.1"
darling = "0.13.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full", "extra-traits", "visit"] }