[package]
name = "fncmd-impl"
version = "2.0.1"
license = "MPL-2.0"
authors = ["Sʜɪᴍᴜʀᴀ Yū <mail@yuhr.org>"]
description = "This crate shouldn't be used directly. Check fncmd."
repository = "https://github.com/yuhr/fncmd"
edition = "2021"
exclude = ["release.toml"]

[lib]
doctest = false
proc-macro = true

[dependencies]
cargo_metadata = "0.15.4"
darling = "0.13.4"
once_cell = "1.17.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "1.0.109", features = ["full", "extra-traits", "visit"] }